test/Fail/Issue2307.err
Issue2307.agda:20.9-13: error: [UnequalTerms]
g (c a) != h (record { f = a }) of type R
when checking that the expression refl has type
g (c a) ≡ h (record { f = a })
